portfolio spacing bug fixed

--- a/style.css
+++ b/style.css
@@ -219,26 +219,26 @@ header h3 {
     color: var(--fg1);
     width: 70%;
     border-left: .75rem solid var(--fg1);
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
+    height: 90%; 
 }
 
 .tabcontent figure {
     padding: 0;
     margin: 0;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.long {
+    width: 300px;
+    flex: 1;
 }
 
 .tabcontent figure img {
-    width: 55%;
-    height: auto;
+    width: auto;
+    height: 75%;
 }
 
 .tabcontent figure figcaption {
